--- a/openapps/irs/Makefile
+++ b/openapps/irs/Makefile
@@ -11,7 +11,9 @@ INSTALLTARGETS = $(EXECS)
 
 IRS := $(shell pwd)
 
-all: $(SRC)
+all: $(EXECS)
+
+$(EXECS): $(SRC)
 	pwd
 	export PATH=$(IRS)/src/scripts:$(PATH); \
 	  make CC=$(CC) CFLAGS="$(CFLAGS) $(OPENMP_ENABLE)" COMMON_FLAGS="$(COMMON_FLAGS) $(OPENMP_ENABLE)" -C build.space/build depend
@@ -19,14 +21,14 @@ all: $(SRC)
 	  make CC=$(CC) CFLAGS="$(CFLAGS) $(OPENMP_ENABLE)" COMMON_FLAGS="$(COMMON_FLAGS) $(OPENMP_ENABLE)" -C build.space/build
 
 $(SRC) src: $(TAR)
-	[ ! -d $(SRC) ] && tar zxf $(TAR)
+	-[ ! -d $(SRC) ] && tar zxf $(TAR)
 	ln -sf $(SRC) src
 	cd $(SRC)/build/arch; ln -sf ../../../make.cbench .
-	touch $(SRC)
 	perl src/scripts/irs_build build.space $(SRC)
 	cd build.space/build; perl ../../$(SRC)/scripts/irs_config cbench
 	cd $(SRC)/scripts; sed -i 's/local\/bin\/perl/bin\/perl/' irs_*
 	cd $(SRC)/scripts; patch -p0 < ../../irs_hrcreate.patch
+	touch $(SRC)
 
 $(TAR) download:
 	$(call download-url,$(URL))
