prototype updates using the new make.inc include file and the prototype 'binstatus' target

--- a/openapps/Makefile
+++ b/openapps/Makefile
@@ -2,10 +2,17 @@
 # directory tree easier
 
 # build a list of directories, once... thus the := syntax
-DIRLIST := $(filter-out Make%, $(shell ls))
+DIRLIST := $(filter-out Make%, $(shell ls -p | grep \/))
 
 default:
 	$(MAKE) PASSTARGET=all $(DIRLIST)
+
+binstatus:
+	$(MAKE) PASSTARGET=$@ $(DIRLIST)
+	@echo;echo
+	@for dir in $(DIRLIST); do \
+		[ -f $$dir/.binstatus ] && cat $$dir/.binstatus; \
+	done
 
 %:
 	$(MAKE) PASSTARGET=$@ $(DIRLIST)
