now have a link sanity check for:  blas  blas + fftw  fftw  lapack + blas
Example output:

% make linkstatus
LINKTEST: dummy_blas was built ok
LINKTEST: dummy_fftw was built ok
LINKTEST: dummy_blas_fftw was built ok
LINKTEST: dummy_lapack was built ok

--- a/cbench/opensource/maketests/Makefile
+++ b/cbench/opensource/maketests/Makefile
@@ -1,9 +1,56 @@
 include $(CBENCHOME)/make.def
 
+# vim: syntax=make
+
+TESTS = dummy_blas dummy_fftw dummy_blas_fftw dummy_lapack
 
 CCFLAGS = -DFFTW -I$(FFTWINCLUDE) $(CFLAGS)
 LINKFLAGS =	$(FFTWLIB)
 
+all: $(TESTS) linkstatus
+
+dummy_blas: dummy.c
+	@echo "===== Testing BLAS linkage ===="
+	$(CC) -DBLAS $(CFLAGS) -c -o $@.o $<
+	$(CC) $@.o $(BLASLIB) -o $@
+	@echo;echo
+
 dummy_fftw: dummy.c
+	@echo "===== Testing FFTW linkage ===="
 	$(CC) -DFFTW -I$(FFTWINCLUDE) $(CFLAGS) -c -o $@.o $<
-	$(CC) dummy_fftw.o -lfftw $(FFTWLIB) 
+	$(CC) $@.o $(FFTWLIB) -o $@
+	@echo;echo
+
+dummy_blas_fftw: dummy.c
+	@echo "===== Testing BLAS+FFTW linkage ===="
+	$(CC) -DBLAS -DFFTW  -I$(FFTWINCLUDE) $(CFLAGS) -c -o $@.o $<
+	$(CC) $@.o $(FFTWLIB) $(BLASLIB)  -o $@
+	@echo;echo
+
+# LAPACK requires BLAS by design
+dummy_lapack: dummy.c
+	@echo "===== Testing LAPACK linkage ===="
+	$(CC) -DLAPACK $(CFLAGS) -c -o $@.o $<
+	$(CC) $@.o $(LAPACKLIB) $(BLASLIB) -o $@
+	@echo;echo
+
+
+clean distclean:
+	/bin/rm -f *.o  $(TESTS)
+
+
+srcsubdir := $(notdir $(shell pwd))
+linkstatus:
+	@for tgtbin in $(TESTS); do \
+		if [ ! -x $$tgtbin ]; then \
+			tput setaf 1 ; tput bold ; \
+			echo "LINKTEST: $$tgtbin was not built" ; \
+			tput sgr0 ;\
+		else \
+			tput setaf 2 ; tput bold ; \
+			echo "LINKTEST: $$tgtbin was built ok" ; \
+			tput sgr0 ;\
+		fi; \
+	done
+
+
