--- a/cbench/templates/bandwidth_osubw.in
+++ b/cbench/templates/bandwidth_osubw.in
@@ -7,9 +7,9 @@
 cbench_check_for_bin CBENCHTEST_BIN_HERE/osu_bw
 
 # does not run on less than 2 processes 
-ONEPROC=`expr NUM_PROCS_HERE \< 2`
-if [ "$ONEPROC" == "1" ]; then
-	cbench_echo "CBENCH NOTICE: osubw needs at least 2 processes"
+ONEPROC=`expr NUM_PROCS_HERE == 2`
+if [ "$ONEPROC" == "0" ]; then
+	cbench_echo "CBENCH NOTICE: osubw requires exactly 2 processes"
 	exit
 fi
 
