run all the bandwidth testing jobs in IMB:   sendrecv pingping pingpong exchange
instead of just sendrecv

--- a/cbench/templates/bandwidth_imb.in
+++ b/cbench/templates/bandwidth_imb.in
@@ -6,7 +6,7 @@
 
 cbench_check_for_bin CBENCHTEST_BIN_HERE/IMB-MPI1
 
-CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/IMB-MPI1 -npmin NUM_PROCS_HERE sendrecv"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/IMB-MPI1 -npmin NUM_PROCS_HERE sendrecv pingping pingpong exchange"
 
 cbench_run_cmd $CMD
 
