Add sPPM to Cbench openapps.
Problem size is statically built into the sppm executable, so any modifications to problem size require a rebuild. Currently, only one binary is built and it has a problem size that uses ~1.2-1.4 GB of memory per thread.

Runtime is set in the inputdeck.cbench file and is currently set to 100 timesteps. Runs of this length and size typically take 1-3+ hours to complete.

--- a/openapps/sppm/Makefile
+++ b/openapps/sppm/Makefile
@@ -6,21 +6,21 @@ TAR=sppm1.1.tar
 URL=https://asc.llnl.gov/computing_resources/purple/archive/benchmarks/sppm/$(TAR)
 
 
-EXECS = $(SRC)/sppm
+EXECS = $(SRC)/run/sppm
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
 
-all:
-
-HIDDENall: $(SRC)
-	make CC=$(CC) -C $(SRC) -f Makefile.cbench
-	#$(MAKE) CC=$(CC) -C $(SRC)
+all: $(SRC)
+	make -C $(SRC) -f Makefile.cbench
 
 $(SRC) src: $(TAR)
 	[ ! -d $(SRC) ] && tar xf $(TAR)
 	ln -sf $(SRC) src
-	cd $(SRC); /bin/rm -f Makefile.cbench
+	cd $(SRC); mv iq.h b_iq.h
+	cd $(SRC); mv sync.h b_sync.h
 	cd $(SRC); ln -sf ../Makefile.cbench .
+	cd $(SRC); ln -sf ../iq.cbench.h ./iq.h
+	cd $(SRC); ln -sf ../sync.cbench.h ./sync.h
 	touch $(SRC)
 
 $(TAR) download:
@@ -28,7 +28,7 @@ $(TAR) download:
 	-[ -e $(TAR) ] && touch $(TAR)
 
 clean:
-	@echo make CC=$(CC) -C $(SRC) veryclean
+	make -C $(SRC) clean
 
 distclean:
 	/bin/rm -rf $(TAR) $(SRC) src
