Add some parallel Make awesomeness.
The Cbench environment variable $MAKE_JOBS is set in make.def.

To use, set the environment variable $JOBS to whatever you want and $MAKE_JOBS 
will be set to that value in make.def; if no $JOBS variable is specified, 1 is 
the default value for $MAKE_JOBS.

--- a/openapps/amg/Makefile
+++ b/openapps/amg/Makefile
@@ -13,7 +13,7 @@ all: $(EXECS)
 
 $(SRC)/test/amg2006: $(SRC)
 	make CC=$(CC) -C $(SRC) veryclean
-	$(MAKE) CC=$(CC) -C $(SRC)
+	$(MAKE) CC=$(CC) -C $(SRC) -j$(MAKE_JOBS)
 
 $(SRC) src: $(TAR)
 	-[ ! -d $(SRC) ] && tar zxf $(TAR)
