for longstress_stress.in job tell cbench to use 8.5 hour walltime
updated mpigraph_mpigraph.in job with settings
found useful by Marcuse/John on sky with the 
addition of 10x more iterations (so it will run
longer as a sustained test in the default Cbench
setup)

--- a/cbench/templates/longstress_stress.in
+++ b/cbench/templates/longstress_stress.in
@@ -4,6 +4,10 @@
 # NOTE: bash syntax is used here
 #
 # Cbench job binary: CBENCHTEST_BIN_HERE/stress
+# 
+# tell Cbench gen_jobs structure to set the batch walltime
+# for longstress jobs to 8.5 hours
+# Cbench_walltime: 08:30:00
 
 cbench_check_for_bin CBENCHTEST_BIN_HERE/stress
 
