update source tarball to latest version l_lpk_p_10.2.5.013 at http://registrationcenter-download.intel.com/akdlm/irc_nas/1778/l_lpk_p_10.2.5.013.tgz

--- a/cbench/opensource/HPLintel/Makefile
+++ b/cbench/opensource/HPLintel/Makefile
@@ -4,10 +4,10 @@
 include ../../make.def
 
 export CFLAGS
-SRC=l_lpk_p_10.2.0.004
-UNTARSRC=linpack_10.2.0
-TAR=$(SRC).tar.gz
-URL=https://registrationcenter.intel.com/irc_nas/1466/${TAR}
+SRC=l_lpk_p_10.2.5.013
+UNTARSRC=linpack_10.2.5
+TAR=$(SRC).tgz
+URL=http://registrationcenter-download.intel.com/akdlm/irc_nas/1778/${TAR}
 MPICH_CH=ch_shmem
 HPL2=$(CBENCHOME)/opensource/HPLintel
 
