this commit finishes making a single 'linpack' testset that has jobs for the tried and true Linpack, Linpack2, and Intel's Linpack

--- a/cbench/templates/linpack_xhplintel.in
+++ b/cbench/templates/linpack_xhplintel.in
@@ -1,4 +1,4 @@
-# linpackintel_xhplintel job template
+# linpack_xhplintel job template
 # NOTE: bash syntax is used here
 #
 # Cbench job binary: CBENCHTEST_BIN_HERE/XHPLINTEL_BIN_HERE
