--- a/cbench/templates/linpack_xhpl2.in
+++ b/cbench/templates/linpack_xhpl2.in
@@ -1,4 +1,4 @@
-# linpack2_xhpl2 job template
+# linpack_xhpl2 job template
 # NOTE: bash syntax is used here
 #
 # Cbench job binary: CBENCHTEST_BIN_HERE/XHPL2_BIN_HERE
