Fixes a small bug where compiling maxalloc.c can't find asm/page.h

--- a/cbench/opensource/ctcs/src/runin/src/memtst.src/Makefile
+++ b/cbench/opensource/ctcs/src/runin/src/memtst.src/Makefile
@@ -14,7 +14,7 @@ sizeofint.h: sizeofint ;
 	sh -c "./sizeofint > sizeofint.h"
 
 maxalloc: sizeofint.h ;
-	$(CC) maxalloc.c -o maxalloc
+	$(CC) $(CFLAGS) maxalloc.c -o maxalloc
 
 memtst: sizeofint.h ;
 	$(CC) $(MEMTST_CFLAGS) -c memory.c -o memory.o
