add 'download' target in makeiles so that a 'make download' at the top level will grab everything ultimately needed for compilation.  this is quite useful when you need to have a complete set of source for compiling Cbench when you don't have seamless internet access.

--- a/cbench/opensource/HPLinpack2/Makefile
+++ b/cbench/opensource/HPLinpack2/Makefile
@@ -52,6 +52,8 @@ $(TAR):
 	$(call download-url,$(URL))
 	-[ -e $(TAR) ] && touch $(TAR)
 
+download: $(TAR)
+
 clean:
 	-[ -d $(SRC) ] && $(MAKE) -C $(SRC) clean_arch_all arch=cbench
 	/bin/rm -rf $(HPL2)/src/lib/* $(HPL2)/src/bin/*
