--- a/cbench/opensource/llcbench/Makefile
+++ b/cbench/opensource/llcbench/Makefile
@@ -13,6 +13,8 @@ $(TAR):
 	@echo "Downloading $(TAR)"
 	$(call download-url,$(URL))
 
+download: $(TAR)
+
 $(SRC): $(TAR)
 	@echo "Extracting $(SRC)"
 	@if [ -f $(TAR) ] ; then tar -zxf $(TAR); \
