--- a/cbench/opensource/iozone/Makefile
+++ b/cbench/opensource/iozone/Makefile
@@ -27,6 +27,8 @@ $(TAR):
 	@echo "Downloading $(TAR)"
 	$(call download-url,$(URL))
 
+download: $(TAR)
+
 $(SRC): $(TAR)
 	@echo "Extracting $(SRC)"
 	@if [ -f $(TAR) ] ; then tar -xf $(TAR); \
