--- a/cbench/opensource/memtester/Makefile
+++ b/cbench/opensource/memtester/Makefile
@@ -14,6 +14,8 @@ $(TAR):
 	@echo "Downloading $(TAR)"
 	$(call download-url,$(URL))
 
+download: $(TAR)
+
 $(SRC): $(TAR)
 	@echo "Extracting $(SRC)"
 	@if [ -f $(TAR) ] ; then tar -zxf $(TAR); \
