with the updated downloaded tarball, the clean target needs to just use the clean target in the src tree

--- a/cbench/opensource/bonnie++/Makefile
+++ b/cbench/opensource/bonnie++/Makefile
@@ -35,7 +35,7 @@ $(SRC): $(TAR)
 	ln -sf $(SRC) src
 
 clean:
-	make -C src realclean 
+	make -C src clean 
 
 distclean: 
 	-/bin/rm -rf $(SRC) $(TAR) src
