i'm not sure why the ubiquitous 'install' is now having trouble with the way EXECS is specified (i haven't bothered to research it), but fixup EXECS to make it install happy

--- a/cbench/opensource/phloem/Makefile
+++ b/cbench/opensource/phloem/Makefile
@@ -6,7 +6,11 @@ SRC=phloem-1.0.0
 TAR=phloem_v1.0.tgz
 URL=https://asc.llnl.gov/sequoia/benchmarks/$(TAR)
 
-EXECS = $(SRC)/linktest*/linux/linktest $(SRC)/presta*/com $(SRC)/sqmr*/sqmr $(SRC)/torustest*/linux/{torustest,generate} $(SRC)/mpiGraph*/{mpiGraph,crunch_mpiGraph} $(SRC)/mpiBench*/{mpiBench_Allreduce,mpiBench_Barrier,mpiBench_Bcast,crunch_mpiBench}
+# I'm not sure why the following EXECS specification seems to now be causing
+# 'install' trouble. I just replaced it with the shell expanded version but
+# keeping the original line for reference
+#EXECS = $(SRC)/linktest*/linux/linktest $(SRC)/presta*/com $(SRC)/sqmr*/sqmr $(SRC)/torustest*/linux/{torustest,generate} $(SRC)/mpiGraph*/{mpiGraph,crunch_mpiGraph} $(SRC)/mpiBench*/{mpiBench_Allreduce,mpiBench_Barrier,mpiBench_Bcast,crunch_mpiBench}
+EXECS = $(SRC)/linktest-1.0.0/linux/linktest $(SRC)/presta-1.0.0/com $(SRC)/sqmr-1.0.0/sqmr $(SRC)/torustest-1.0.0/linux/torustest $(SRC)/torustest-1.0.0/linux/generate $(SRC)/mpiGraph-1.0.0/mpiGraph $(SRC)/mpiGraph-1.0.0/crunch_mpiGraph $(SRC)/mpiBench-1.0.0/mpiBench_Allreduce $(SRC)/mpiBench-1.0.0/mpiBench_Barrier $(SRC)/mpiBench-1.0.0/mpiBench_Bcast $(SRC)/mpiBench-1.0.0/crunch_mpiBench
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
 
